--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,10 @@ body {
   font-family: "Poppins", sans-serif;
   background-color: #ffffff;
 }
+maim {
+  display: grid;
+  text-align: center;
+}
 .container {
   background-color: #f8e5e5e8;
   display: flex;
@@ -62,4 +66,28 @@ button {
 .logos img {
   width: 483.87px;
   height: 110px;
+}
+/* media queries */
+@media only screen and (max-width: 688px) {
+  .container {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .top-highlights {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media only screen and(min-width:992px) {
+  .container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .top-highlights {
+    display: flex;
+    flex-direction: column;
+  }
 }
